--- a/home_page/css/home_mobile.css
+++ b/home_page/css/home_mobile.css
@@ -29,19 +29,20 @@
     .nav-link {
         display: block;
         position: absolute;
-        top: 80px;
+        top: -25px;
         right: 0;
         width: 100%;
         height: 0;
         background-color: var(--color-primary);
         z-index: 3;
-        padding-top: 100px;
+        padding-top: 160px;
         transition: 0.3s;
         visibility: hidden;
         overflow-y: hidden;
+        z-index: -1;
     }
     .nav-link.active {
-        height: 570px;
+        height: calc(101vh);
         visibility: visible;
     }
     .nav-link ul {
