--- a/home_page/css/home_mobile.css
+++ b/home_page/css/home_mobile.css
@@ -54,6 +54,9 @@
     .nav-link ul li {
         padding-bottom: 48px;
     }
+    .nav-link ul li a{
+        font-size: 24px;
+    }
     #start-session {
         position: absolute;
         bottom: 30px;
