--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -291,7 +291,7 @@ td {
     .table-container {
         max-width: 1050px;
         width: 100%;
-        overflow-x: auto;
+        overflow-x: scroll;
         white-space: nowrap;
     }
     .table-horarios th,
