--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -292,6 +292,7 @@ td {
         max-width: 1050px;
         width: 100%;
         overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
         white-space: nowrap;
     }
     .table-horarios th,
