fiz scroll table

--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -295,6 +295,15 @@ td {
         -webkit-overflow-scrolling: touch;
         margin-bottom: 150px;
     }
+    .table-container::-webkit-scrollbar {
+        height: 10px;
+        background-color: var(--color-primary);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    .table-container::-webkit-scrollbar-thumb {
+        background: #ffffff;
+        border-radius: 2px;
+    }
     .table-horarios {
         width: 1050px;
         table-layout: fixed;
