alter space section title

--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -235,7 +235,8 @@ td {
 
     /* Section title */
     .title {
-        margin-top: 200px;
+        margin-top: 164px;
+        height: 100px;
     }
 
     /* INSTRUTORES */
