--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -118,6 +118,7 @@ section.instrutor-container {
     max-width: 1280px;
     width: 100%;
     height: 1507px;
+    margin-top: 96px;
 }
 .first-section-instructor {
     width: 100%;
@@ -235,8 +236,8 @@ td {
 
     /* Section title */
     .title {
-        margin-top: 164px;
-        height: 100px;
+        margin-top: 96px;
+        height: 200;
     }
 
     /* INSTRUTORES */
