--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -31,6 +31,7 @@ section.title-container {
     max-width: 983px;
     width: 100%;
     padding: 414px 0 272px 0;
+    margin-top: 96px;
 }
 .main-container .title-container h1 {
     font-size: 64px;
